# RShell

./: .gitignore  CMakeLists.txt  README.md  names.txt
header/: Command.hpp  Connector.hpp  Executable.hpp
integration_tests/: commented_command_tests.sh  exit_command_tests.sh  multiple_commands_tests.sh  single_command_tests.sh
src/: Connector.cpp  Executable.cpp  main_rshell.cpp  unit_test.cpp
unit_tests/: Connector_test.hpp  ExecutableMock.hpp  Executable_unit_test.hpp
